--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./src/style.css">
-  <script src="./src/main.ts" async></script>
+  <script src="./src/main.ts" async type="module"></script>
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 
