--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="./src/style.css">
   <script src="./src/main.ts" async type="module"></script>
   <title>Frontend Mentor | Interactive rating component</title>
@@ -14,7 +14,7 @@
   <div class="flex-container">
     <div class="card">
       <div class="star">
-        <img src="./images/icon-star.svg" alt="star-icon">
+        <img src="./icon-star.svg" alt="star-icon">
       </div>
       <h1>How did we do?</h1>
       <p>
